--- a/css/main.css
+++ b/css/main.css
@@ -141,8 +141,12 @@ thead {
     background-color: #2D4962;
     position: fixed;
     color: white;
+   
 }
 
+tbody{
+    margin-top: 30px;
+}
 th,td{
     font-weight: normal;
     margin: 0;
@@ -182,13 +186,16 @@ tr:nth-child(even) {
 .dropdown {
     position: relative;
     display: inline-block;
+   
 }
 
 .dropdown-content {
     display: none;
     position: relative;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.2);
-    
+    width: 240px;
+    overflow-y: scroll;
+    height: 200px;
 }
 
 .dropdown-content a {
@@ -203,19 +210,25 @@ tr:nth-child(even) {
 .dropdown-content a:hover {
     background-color:#2D4962;
     color: white;  
+    
 }
 
 
 .dropdown:hover .dropdown-content{
     display: block; 
+    
 }
 
 .wrapper .sidebar ul li .dropdown .dropdown-content a:hover{
     color: white;
-    font-size: 25pxx;
 }
 
     
 .crud {
+    margin-left: 300px;
+}
+
+
+.salida1 {
     margin-left: 300px;
 }
